changed file location

--- a/src/login.html
+++ b/src/login.html
@@ -63,7 +63,7 @@
             >
               Don't have an account?
               <a
-                href="./index.html"
+                href="../index.html"
                 class="text-orange-700 font-bold hover:border-b-2 hover:border-orange-700"
                 >Sign Up</a
               >
