--- a/src/index.html
+++ b/src/index.html
@@ -77,7 +77,7 @@
             >
               Already have an account?
               <a
-                href="./src/login.html"
+                href="./login.html"
                 class="text-orange-700 font-bold hover:border-b-2 hover:border-orange-700"
                 >Login</a
               >
